# CaMeL-Community-Web

./: .gitignore  CLAUDE.md  Justfile  docker-compose.dev.yml  package.json  work.md  需求文档.docx
backend/: .dockerignore  .env.example  Dockerfile.dev  Dockerfile.prod  Justfile  docker-compose.yml  pyproject.toml
backend/apps/accounts/: adapters.py  admin.py  admin_api.py  api.py  invitation_api.py  models.py  schemas.py  services.py  tasks.py  user_api.py  views.py
backend/apps/bounties/: admin.py  api.py  apps.py  models.py  schemas.py  services.py  tasks.py
backend/apps/credits/: api.py  apps.py  models.py  ranking_api.py  services.py  tasks.py
backend/apps/notifications/: api.py  models.py  services.py
backend/common/: __init__.py  constants.py  exceptions.py  hashers.py  middleware.py  pagination.py  permissions.py  quota_service.py  utils.py
backend/config/: api.py  celery.py  urls.py  wsgi.py
backend/scripts/: start-web.sh
backend/tests/: conftest.py  test_accounts_service.py  test_admin_skill_review_api.py  test_admin_system.py  test_api_regression.py  test_auth_api.py  test_bounty_api_flow.py  test_bounty_payment_flow.py  test_bounty_reviews_admin.py  test_bounty_service.py  test_invitation_flow.py  test_issue1_acceptance_regressions.py  test_logic.py  test_notifications_search.py  test_package_service.py  test_payments_credits.py  test_phase4_b_features.py  test_security_fixes.py  test_skill_models.py  test_skill_services.py  test_skills_api_flow.py  test_skills_service.py  test_workshop_rules.py  test_workshop_service.py
deploy/: .env.example  (+5 more)
(+203 files in other folders)
